--- a/meta/info.yml
+++ b/meta/info.yml
@@ -1,7 +1,18 @@
 name: 
-  blank-name
+  blank-template-template
 type:
-  what-type-of-template
+  atomist-template
 
 description: 
-  A brief description
+  Helps you create an Atomist Template of your own.
+  
+parameters:
+  - name: description
+    required: true
+    description: The microservice short description
+    valid-input-description: A short description of the service.
+
+  - name: template-type
+    required: true
+    description: Custom type to be used to index this Atomist Template
+    valid-input-description: A short type to be used to index this template.
